refactor: fix ts errors

--- a/src/routes/(md)/support/add-bani-captions-to-zoom-meetings/index.mdx
+++ b/src/routes/(md)/support/add-bani-captions-to-zoom-meetings/index.mdx
@@ -3,9 +3,6 @@ title: Integrating closed captioning in Zoom Meetings
 ---
 
 import Media from '~/components/media/media'
-import zoomSettingsClosedCaptioning from '/media/zoom-settings-closed-captioning.png'
-import zoomMeetingControlsClosedCaption from '/media/zoom-meeting-controls-closed-caption.png'
-import shabadosZoomPanel from '/media/shabados-zoom-panel.png'
 
 # Integrate Gurbani Closed Captioning in Zoom Meetings
 
@@ -17,14 +14,14 @@ Closed captions can be provided by the host of a Zoom meeting. Before beginning 
 
 [See the official Zoom article about closed captioning.](https://support.zoom.us/hc/en-us/articles/207279736)
 
-<Media src={zoomSettingsClosedCaptioning} alt='' />
+<Media src='/media/zoom-settings-closed-captioning.png' alt='' />
 
 1. Open the [**Zoom web portal Settings**](https://zoom.us/profile/setting).
 1. In the **Meeting** tab, enable **Closed captioning**.
 
 ## Enable closed captioning in a Zoom meeting
 
-<Media src={zoomMeetingControlsClosedCaption} alt='' />
+<Media src='/media/zoom-meeting-controls-closed-caption.png' alt='' />
 
 1. In a Zoom meeting that you are hosting, move your mouse in the Zoom window to display the **in-meeting controls** at the bottom.
 1. Click **Closed Caption** from the in-meeting controls. You may have to use the **More** menu (...) to find it.
@@ -32,7 +29,7 @@ Closed captions can be provided by the host of a Zoom meeting. Before beginning 
 
 ## Connect the Zoom API token with Shabad OS
 
-<Media src={shabadosZoomPanel} alt='' />
+<Media src='/media/shabados-zoom-panel.png' alt='' />
 
 1. In the Shabad OS controller, click the cog/gear to open the **Settings** window.
 1. Select **Closed Captioning** in the left pane.
