docs: add support for shabad os library

--- a/src/routes/(md)/support/index@uneditable.mdx
+++ b/src/routes/(md)/support/index@uneditable.mdx
@@ -6,10 +6,19 @@ title: Support
 
 Do more with Shabad OS products. Learn about features and discover everything they can do.
 
-- [Add bani captions to a live stream](/support/add-bani-captions-to-a-live-stream)
-- [Learn how to proofread](/support/learn-how-to-proofread)
-- [Import an Overlay Theme](/support/import-an-overlay-theme)
+**Presenter**
+
 - [Install Shabad OS Presenter](/support/install-shabad-os-presenter)
+- [Add bani captions to a live stream](/support/add-bani-captions-to-a-live-stream)
+- [Import an Overlay Theme](/support/import-an-overlay-theme)
 - [Integrate Bani Captions Into a Zoom Meeting](/support/add-bani-captions-to-zoom-meetings)
 - [Chromecast the Shabad OS Presenter](/support/display-shabad-os-on-a-chromecast)
+
+**Viewer**
+
+- [Learn how to proofread](/support/learn-how-to-proofread)
 - [Get Started With Shabad OS Viewer](/support/get-started-with-shabad-os-viewer)
+
+**Library**
+
+- [Library User Guide](/support/guide/library/welcome)
