style: run format and lint

--- a/src/routes/(md)/blog/higher-standard-for-transliterations/index.mdx
+++ b/src/routes/(md)/blog/higher-standard-for-transliterations/index.mdx
@@ -2,7 +2,7 @@
 title: Setting a higher standard for transliterations
 ---
 
-import Media from '~/components/media/media'
+import Media from '~/components/media/media';
 
 # Setting a higher standard for Sikh Gurbani and Punjabi transliterations
 
