--- a/src/routes/(md)/support/add-bani-captions-to-a-live-stream/copy-overlay-url.mdx
+++ b/src/routes/(md)/support/add-bani-captions-to-a-live-stream/copy-overlay-url.mdx
@@ -1,4 +1,4 @@
-import Media from '~/components/media/media'
+import Media from '~/components/media/media';
 
 ## Copy the Overlay URL for Shabad OS
 
