--- a/src/routes/(md)/support/add-bani-captions-to-a-live-stream/index.mdx
+++ b/src/routes/(md)/support/add-bani-captions-to-a-live-stream/index.mdx
@@ -2,8 +2,8 @@
 title: Use Presenter to Add Captions on Live Stream Software
 ---
 
-import Media from '~/components/media/media'
-import CopyOverlayUrl from './copy-overlay-url.mdx'
+import Media from '~/components/media/media';
+import CopyOverlayUrl from './copy-overlay-url.mdx';
 
 # Connect Your Live Stream With Shabad OS
 
