--- a/src/routes/(md)/support/add-bani-captions-to-a-live-stream/obs-studio/index.mdx
+++ b/src/routes/(md)/support/add-bani-captions-to-a-live-stream/obs-studio/index.mdx
@@ -2,9 +2,9 @@
 title: Add Bani Captions to OBS Studio
 ---
 
-import Media from '~/components/media/media'
-import CopyOverlayUrl from '../copy-overlay-url.mdx'
-import ResolutionExplanation from '../resolution-explanation.mdx'
+import Media from '~/components/media/media';
+import CopyOverlayUrl from '../copy-overlay-url.mdx';
+import ResolutionExplanation from '../resolution-explanation.mdx';
 
 # Add Bani Captions to OBS Studio
 
