--- a/src/routes/(md)/support/add-bani-captions-to-zoom-meetings/index.mdx
+++ b/src/routes/(md)/support/add-bani-captions-to-zoom-meetings/index.mdx
@@ -2,7 +2,7 @@
 title: Integrating closed captioning in Zoom Meetings
 ---
 
-import Media from '~/components/media/media'
+import Media from '~/components/media/media';
 
 # Integrate Gurbani Closed Captioning in Zoom Meetings
 
