--- a/src/routes/(md)/support/get-started-with-shabad-os-viewer/index.mdx
+++ b/src/routes/(md)/support/get-started-with-shabad-os-viewer/index.mdx
@@ -2,7 +2,7 @@
 title: Get Started With Viewer
 ---
 
-import Media from '~/components/media/media'
+import Media from '~/components/media/media';
 
 # Get Started With Viewer
 
