--- a/src/routes/(md)/support/install-shabad-os-presenter/index.mdx
+++ b/src/routes/(md)/support/install-shabad-os-presenter/index.mdx
@@ -2,7 +2,7 @@
 title: Install Shabad OS Presenter
 ---
 
-import Media from '~/components/media/media'
+import Media from '~/components/media/media';
 
 # Install Shabad OS Presenter
 
