--- a/src/routes/(md)/support/learn-how-to-proofread/index.mdx
+++ b/src/routes/(md)/support/learn-how-to-proofread/index.mdx
@@ -2,7 +2,7 @@
 title: Proofreading
 ---
 
-import Media from '~/components/media/media'
+import Media from '~/components/media/media';
 
 # Proofread the Shabad OS Database using an online Viewer
 
