--- a/src/routes/docs/database/schema/index.mdx
+++ b/src/routes/docs/database/schema/index.mdx
@@ -2,7 +2,7 @@
 title: Database Schema
 ---
 
-import Media from '~/components/media/media'
+import Media from '~/components/media/media';
 
 # Database Schema
 
