--- a/src/routes/docs/presenter/urls/index.mdx
+++ b/src/routes/docs/presenter/urls/index.mdx
@@ -2,7 +2,7 @@
 title: URL Endpoints
 ---
 
-import Media from '~/components/media/media'
+import Media from '~/components/media/media';
 
 # URL Endpoints
 
