feat: add non profit details to about us

--- a/src/routes/(md)/about/index@uneditable.mdx
+++ b/src/routes/(md)/about/index@uneditable.mdx
@@ -12,3 +12,15 @@ title: About Us
 Shabad is commonly defined as a hymn, but could its meaning be something more elusive? Our goal is to learn about Shabad through the various writings of the Sikh philosophy and then to make them more accessible for others to learn from as well. Hence the OS in our name – It stands for open-source.
 
 The term open-source originates in a software movement to support open collaboration. Basically, people desired to voluntarily cooperate together to create something better. Similarly, we believe in an open-source Sikh philosophy. Everyone can join, there are no barriers to participation. The work that is completed can be handed off to the following generations.
+
+Shabad OS is registered as a 501(c)(3) non-profit organization, with an IRS ruling year of 2020. Donations are tax-deductible to the extent allowed by law. Our tax identification number is 85-0806383.
+
+As a non-profit organization, Shabad OS reinvests all earnings into everything we do, from product development to running costs for online services. Your gift holds great power to help transform and expand Shabad OS to people everywhere. We see our supporters as co-visionaries for our project mission.
+
+To make a gift by mail using a check, please complete this <a href="https://docs.google.com/forms/d/e/1FAIpQLSdsohrwd46xLZubbpOH4tecydkqiy-BHNMg0k0zbix3gmvwoA/viewform?usp=sharing" target="_blank">contribution form</a>. Mail the completed form and your check to:
+
+Shabad OS<br/>
+2719 Heights View Ct<br/>
+Rochester, MI 48306
+
+If you have any questions please email us at team@shabados.com.
