docs: add hukamnama guide

--- a/src/routes/(md)/support/index@uneditable.mdx
+++ b/src/routes/(md)/support/index@uneditable.mdx
@@ -22,3 +22,7 @@ Do more with Shabad OS products. Learn about features and discover everything th
 **Library**
 
 - [Library User Guide](/support/guide/library/welcome)
+
+**Web**
+
+- [Display Hukamnama](/support/guide/web/hukamnama)
