feat: add font ratio and add latin font with variable font weight

--- a/src/routes/(md)/support/guide/web/hukamnama/index.mdx
+++ b/src/routes/(md)/support/guide/web/hukamnama/index.mdx
@@ -57,7 +57,7 @@ Are you a software developer or a computer programmer? See our [list of hukamnam
 
 ## Custom Hukamnama
 
-Find your shabad using the search bar (e.g. https://www.shabados.com/app/search/hmsp). Once you have found the shabad, click on the shabad to display it. In the address bar, you will see a URL that ends with an ID. Note down the different IDs that you want to display on the hukamnama. You can then use the following URL to display the hukamnama:
+Find your shabad using the search bar (e.g. https://www.shabados.com/search/hmsp). Once you have found the shabad, click on the shabad to display it. In the address bar, you will see a URL that ends with an ID. Note down the different IDs that you want to display on the hukamnama. You can then use the following URL to display the hukamnama:
 
 ```
 https://www.shabados.com/hukamnama/custom/{ids}
